tests/transpiler/x/py/join_multi.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/transpiler/x/py/join_multi.py", line 28, in <module>
    result = [Result(c["name"], i["sku"]) for o in orders for c in customers for i in items if o.customerId == c["id"] and o.id == i["orderId"]]
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/mochi/tests/transpiler/x/py/join_multi.py", line 28, in <listcomp>
    result = [Result(c["name"], i["sku"]) for o in orders for c in customers for i in items if o.customerId == c["id"] and o.id == i["orderId"]]
                                                                                                               ~^^^^^^
TypeError: 'Customer' object is not subscriptable
