tests/transpiler/x/py/join_multi.py
# Generated by Mochi transpiler v0.10.34 on 2025-07-22 06:16 +0700
from dataclasses import dataclass
from typing import List, Dict

@dataclass
class Customer:
    id: int
    name: str

customers = [Customer(1, "Alice"), Customer(2, "Bob")]
@dataclass
class Order:
    id: int
    customerId: int

orders = [Order(100, 1), Order(101, 2)]
@dataclass
class Item:
    orderId: int
    sku: str

items = [Item(100, "a"), Item(101, "b")]
@dataclass
class Result:
    name: any
    sku: any

result = [Result(c["name"], i["sku"]) for o in orders for c in customers for i in items if o.customerId == c["id"] and o.id == i["orderId"]]
print("--- Multi Join ---")
for r in result:
    print(" ".join(str(x) for x in [r["name"], "bought item", r["sku"]]).rstrip())
